fix getlogs endpoint
