# docs/swagger.yaml
@@ -394,9 +394,9 @@ paths:
         in: query
         name: levelName
         type: string
-      - description: システム名でのフィルタ
+      - description: システムidでのフィルタ
         in: query
-        name: systemName
+        name: systemId
         type: string
       - description: メッセージ内容の部分一致フィルタ
         in: query
